--- a/IzvorniKod/mojKvart/frontend/src/styles/signup.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/signup.css
@@ -1,40 +1,63 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 .signup-container {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-   /* background-image: url('../assets/vege.avif');  treba nam bolja slika */ 
+    background-image: url('../assets/vege.avif');  
     background-size: cover;
     background-position: center;
+    width: 100%;
 }
+
+
+*{
+    user-select: none;
+  
+  }
 
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    max-width: 400px;
+    width: 120%;
+    max-width: 500px;
     padding: 20px;
-    background: rgba(255, 255, 255, 0.9);
-    border-radius: 12px;
+    background: rgba(255, 255, 255);
+    border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
 }
 
 .form-box {
     width: 100%;
     text-align: center;
+    font-family: Raleway, sans-serif;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .form-box h2 {
+    margin-bottom: 30px;
+    margin-top: 10px;
+    padding-bottom: 10px;
+    font-size: 28px;
+    color: #3c3c3cb3;
     margin-bottom: 20px;
-    font-size: 24px;
-    color: #333;
+    font-family: Raleway, sans-serif;
+    line-height: normal;
+    font-weight: lighter;
 }
 
 .form-group {
     display: flex;
     gap: 10px;
+}
+
+.forms{
+    display: flex;
+    flex-direction: column; /* Keeps inputs aligned vertically */
+    width: 100%;
 }
 
 .form-group input[type="text"] {
@@ -46,19 +69,49 @@
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 8px;
     font-size: 16px;
+    font-family: Raleway, sans-serif;
 }
 
 .signup-buttons {
     width: 100%;
     padding: 10px;
-    font-size: 18px;
+    font-size: 16px;
     color: #fff;
-    background-color: #ccc;
+    background-color: #b3b3b3;
     border: none;
-    border-radius: 5px;
+    border-radius: 8px;
     cursor: pointer;
+    border: none;
+    font-family: Raleway, sans-serif;
+}
+
+.signup-buttons:hover{
+    background-color:rgba(62, 152, 30, 0.80); 
+    font-family: Raleway, sans-serif;
+  }
+
+.signup-inputs{
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    font-size: 16px;
+}
+
+.divider {
+    height: 1px;
+    background-color: #ddd;
+  }
+
+#home, #email, #pass{
+    width: 96%;
+    justify-content: left;
+    justify-items: left;
+}
+
+#Back{
+    margin-bottom: 15px;
 }
 
 
