--- a/IzvorniKod/mojKvart/frontend/src/styles/login.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/login.css
@@ -1,6 +1,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 .login-container {
   display: flex;
   min-height: 100vh;
@@ -40,20 +46,20 @@
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 15px;
   text-align: center;
+  justify-content: center;
   padding: 3rem 2rem;
   width: 250px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
+  display: flex;              /* Enable flexbox */
+  flex-direction: column;     /* Stack elements vertically */
+  justify-content: center;    /* Vertically center content */
+  align-items: center;        /* Horizontally center content */
 }
 
-.overlay-box h1 {
-  font-size: 2.5rem;
-  margin-bottom: 0.5rem;
+.overlay-box img{
+  justify-content: center;
 }
 
-.overlay-box p {
-  font-size: 1.2rem;
-  color: #666;
-}
 
 .big-container {
   width: 50%;
@@ -98,7 +104,7 @@
   border-radius: 8px;
   background-color: #f9f9f9;
   font-size: 16px;
-  
+  display: block;
 
 }
 
@@ -120,11 +126,16 @@
 }
 
 
-#password, #email{
- width: 94%;
- align-content: baseline;
- align-self: baseline;
+#password{
+ width: 100%;
+ align-content: left;
+ align-self: left;
 }
+
+#email{
+  width: 100%;
+}
+
 
 .show-hide {
   font-size: 14px;
@@ -132,17 +143,29 @@
   cursor: pointer;
 }
 
-button {
+.login-form{
+  width:100%;
+}
+
+.login-form button {
+  font-family: Raleway, sans-serif;
   width: 100%;
   padding: 12px;
   font-size: 16px;
   color: #fff;
   background-color: #b3b3b3;
   border: none;
-  border-radius: 8px;
+  border-radius: 12px;
   cursor: pointer;
-  margin-top: 15px;
-  font-family: Raleway, sans-serif;
+  
+}
+
+.login-form .inputs {
+  width: 100%; /* Ensures email and password inputs fill their parent container */
+}
+
+.inputs{
+  width: 100%;
 }
 
 
