--- a/IzvorniKod/mojKvart/frontend/src/styles/login.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/login.css
@@ -11,7 +11,6 @@
   display: flex;
   min-height: 100vh;
   margin: 0;
-  background-image: url("../assets/vege.avif");
   background-size: cover; /* Adjust to fit or cover as needed */
   background-repeat: no-repeat; /* Prevents repeating */
   background-position: center; /* Centers the image */
@@ -21,6 +20,7 @@
 
 
 .image-container {
+  background-image: url("../assets/grocery_v1_cut.png");
   position: relative;
   width: 50%;
   display: flex;
@@ -44,6 +44,7 @@
 
 .overlay-box {
   background-color: rgba(255, 255, 255, 0.8);
+  
   border-radius: 15px;
   text-align: center;
   justify-content: center;
@@ -66,15 +67,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #EDEDED;
 }
 
 .login-form {
   width: 100%;
   max-width: 440px;
   padding: 40px;
-  background-color: #fff;
-  border-radius: 15px;
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  background-color: #EDEDED;
+  /* border-radius: 15px; */
+  /* box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1); */
   text-align: center;
 }
 
@@ -210,59 +212,33 @@ button:hover{
 @media (max-width: 1000px) {
   .login-container {
     flex-direction: column;
-    min-height: 100vh;
-    margin: 0;
-    background-image: url("../assets/vege.avif");
-    background-size: cover; /* Ensure it covers the entire container */
-    background-repeat: no-repeat;
-    background-position: center;
-    overflow: hidden; 
+    align-items: center;
+    background: none;
+    background-image: url("../assets/grocery_v1.png");
   }
 
   .image-container {
     width: 100%;
-    height: 200px;
-    order: 1; /* Move logo section to the top */
-    margin-bottom: 20px;
-  }
-
-  #kupujlokalno{
-    font-size: 18px;
-    margin-top: 0PX;
-    font-family: Raleway, sans-serif;
+    height: 300px;
+    
   }
 
   .big-container {
     width: 100%;
-    order: 2; /* Move form section below the logo */
-    padding: 0 20px;
+    padding: 20px;
+    max-width: 500px;
+    border-radius: 15px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1); 
   }
 
   .overlay-box {
     width: 100%;
-    max-width: 300px;
-    padding: 2rem 2rem;
-  }
-
-  .overlay-box img {
-    width: 150px; /* or whatever width you need */
-    height: auto; /* maintains the aspect ratio */
-    margin-bottom: 10px; /* space between logo and text */
+    max-width: 250px;
   }
 
   .login-form {
     width: 100%;
     max-width: 380px;
     padding: 20px;
-  }
-
-  .inputs {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-  }
-
-  .naslov{
-    font-size: 24px;
   }
 }
