Preinake u stilu home stranice

--- a/IzvorniKod/mojKvart/frontend/src/styles/Shop.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/Shop.css
@@ -1,3 +1,10 @@
+body {
+  background-color: #ededed;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
 .content-wrapper {
   background-color: #ededed;
   padding: 20px 0;
