--- a/IzvorniKod/mojKvart/frontend/src/styles/home.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/home.css
@@ -1,8 +1,9 @@
-
-body{
+body {
     background-color: #ededed;
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
-
 .price{
     font-size: 18px;
     color: #2c8c2c;
