--- a/IzvorniKod/mojKvart/frontend/src/styles/popisTrgovina.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/popisTrgovina.css
@@ -44,6 +44,11 @@
   box-sizing: border-box;
   padding:0;
   height: 28rem;
+  transition: border ease; 
+}
+
+.shop-card:hover {
+  border: 5px solid yellowgreen;
 }
 
 .shop-card img {
@@ -110,8 +115,8 @@
 @media (max-width: 768px) {
   .shop-shop-row {
     flex-direction: column;
-    align-items: center; /* Center items */
-    justify-content: center; /* Center items */
+    align-items: center; 
+    justify-content: center; 
     width: 100%;
     gap: 10px;
   }
@@ -125,20 +130,19 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center; /* Center cards in the section */
+    align-items: center; 
     gap: 20px;
   }
   
   .shop-card {
-    width: 100%; /* Full width for smaller screens */
+    width: 100%; 
     display: flex;
     flex-direction: column;
     height: auto;
-    min-height: 300px; /* Set a minimum height so all cards are at least this tall */
+    min-height: 300px; 
     box-sizing: border-box;
   }
   .card-body-shop {
-    flex-grow: 1; /* Make the card body take up remaining space */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
