--- a/IzvorniKod/mojKvart/frontend/src/styles/signup.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/signup.css
@@ -119,12 +119,12 @@
 }
 
 .toggle-password-button-signup{
-    flex: 0 1 15%;
+    
+        margin-bottom: 15px !important;
+        font-size: 12px !important;
+    flex: 0 1 10%;
     margin-bottom: 15px;
     font-size: 12px;
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
     font-size: 16px;
     color: #fff;
     background-color: #b3b3b3;
