--- a/IzvorniKod/mojKvart/frontend/src/styles/signup.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/signup.css
@@ -134,3 +134,9 @@
     border: none;
     font-family: Raleway, sans-serif;
   }
+
+  .error-message {
+    color: red;
+    font-size: 14px;
+    margin-top: 10px;
+  }
