--- a/IzvorniKod/mojKvart/frontend/src/styles/popisTrgovina.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/popisTrgovina.css
@@ -1,3 +1,24 @@
+#window {
+  z-index: 1;
+}
+
+#window[style*="cursor: not-allowed"] * {
+  pointer-events: none;
+  cursor: not-allowed;
+}
+
+#window[style*="cursor: not-allowed"] .filterPopovers,
+#window[style*="cursor: not-allowed"] .filterItem * {
+  pointer-events: auto;
+  cursor: pointer;
+}
+
+#window[style*="cursor: not-allowed"] .filterPopovers,
+#window[style*="cursor: not-allowed"] .YesNoButtons * {
+  pointer-events: auto;
+  cursor: pointer;
+}
+
 .content-wrapper-shop  {
   background-color: #ededed;
   padding: 20px 0;
@@ -21,6 +42,7 @@
 .filters {
   flex: 0 0 20%; 
   margin-left: 20px; 
+  margin-right: 20px;
   width: 20%; 
   padding: 20px;
   border-radius: 20px;
@@ -29,6 +51,9 @@
   font-size: 18px;
   background-color: #fff;
   border: 1px solid #ddd;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .shop-section {
@@ -129,6 +154,68 @@
   color: #666;
   right:5px
 }
+
+.filters > button {
+  background-color: rgba(50, 49, 49, 0.70); 
+  color: white; 
+  width: 90%;
+  padding: 5px 10px; 
+  font-family: Raleway, sans-serif;
+  border-radius: 20px; 
+  margin-bottom: 10px;
+}
+
+.filters > button:hover {
+  background-color:rgba(62, 152, 30, 0.80); 
+  border-color: rgba(59, 145, 28, 0.8); 
+}
+
+.filterPopovers {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 50%;
+  max-width: 500px;
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.filterItem {
+  display: flex;
+  flex-direction: row;
+  gap: 3px;
+  align-items: center;
+}
+
+.YesNoButtons {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.YesNoButtons > button {
+  width: 20%;
+  background-color: rgba(50, 49, 49, 0.70); 
+  color: white; 
+  padding: 5px 10px; 
+  font-family: Raleway, sans-serif;
+  border-radius: 15px;
+}
+
+.YesNoButtons > button:hover {
+  background-color:rgba(62, 152, 30, 0.80); 
+  border-color: rgba(59, 145, 28, 0.8); 
+}
+
+
 
 @media (max-width: 868px) {
   .shop-shop-row {
