--- a/IzvorniKod/mojKvart/frontend/src/styles/NavBar.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/NavBar.css
@@ -1,128 +1,124 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 .navbar-nav {
-    white-space: nowrap;  
-  }
+  white-space: nowrap;  
+}
 
-  #najvanjski{
-    background-color: #EDEDED;
-    border-radius: 0;
-   
-  }
-
-  form .form-control {
-    width: 80%;
-    height: 3em;
-    flex-shrink: 0;
-    border-radius: 20px;
-    background: #EDEDED;
-    font-family: Raleway, sans-serif;
-    padding-left: 3%;
-  }
-
-  form .btn {
-    background-color: rgba(50, 49, 49, 0.70); 
-    color: white; 
-    padding: 10px 20px; 
-    font-family: Raleway, sans-serif;
-    border-radius: 20px; 
-  }
-
+#najvanjski{
+  background-color: #EDEDED;
+  border-radius: 0;
   
+}
 
-  form .btn:hover {
-    background-color:rgba(62, 152, 30, 0.80); 
-    border-color: rgba(59, 145, 28, 0.8); 
-  }
-  
-  form .btn:focus {
-    outline: none; 
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); 
-  }
+form .form-control {
+  width: 80%;
+  height: 3em;
+  flex-shrink: 0;
+  border-radius: 20px;
+  background: #EDEDED;
+  font-family: Raleway, sans-serif;
+  padding-left: 3%;
+}
 
-  #Vanjski{
-    background-color: #fff;
-    border-radius: 0 !important;
-  }
+form .btn {
+  background-color: rgba(50, 49, 49, 0.70); 
+  color: white; 
+  padding: 10px 20px; 
+  font-family: Raleway, sans-serif;
+  border-radius: 20px; 
+}
 
+form .btn:hover {
+  background-color:rgba(62, 152, 30, 0.80); 
+  border-color: rgba(59, 145, 28, 0.8); 
+}
 
-  #unutarnji{
-    margin-top:20px;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 5px;
-    border-radius: 0; 
+form .btn:focus {
+  outline: none; 
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); 
+}
 
-  }
+#Vanjski{
+  background-color: #fff;
+  border-radius: 0 !important;
+}
 
-  #searchdiv{
-    width: 50%;
-    justify-content: center;
-  }
+#unutarnji{
+  margin-top:20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 5px;
+  border-radius: 0; 
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between
+}
 
-  #MojRacun{
-    padding-right: 15px;
-    font-family: Raleway,sans-serif;
-    text-align: center;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    outline: none;
-    color: #323131;
-    text-decoration: none;
-    border-right: 2px solid rgba(50, 49, 49, 0.50);
-  }
+#searchdiv{
+  width: 50%;
+  justify-content: center;
+}
 
+#MojRacun{
+  padding-right: 15px;
+  font-family: Raleway,sans-serif;
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  outline: none;
+  color: #323131;
+  text-decoration: none;
+  border-right: 2px solid rgba(50, 49, 49, 0.50);
+}
 
-  #OdjaviSe{
-    padding-right: 15px;
-    font-family: Raleway,sans-serif;
-    text-align: center;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    outline: none;
-    color: #323131;
-    text-decoration: none;
-    border-right: 2px solid rgba(50, 49, 49, 0.50);
-  }
+#OdjaviSe{
+  padding-right: 15px;
+  font-family: Raleway,sans-serif;
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  outline: none;
+  color: #323131;
+  text-decoration: none;
+  border-right: 2px solid rgba(50, 49, 49, 0.50);
+}
 
-  #MojRacun:focus{
-    text-decoration: none;
-    outline: none;
-  }
+#MojRacun:focus{
+  text-decoration: none;
+  outline: none;
+}
 
-  #MojRacun:hover, #OdjaviSe:hover {
-    transform: none; 
+#MojRacun:hover, #OdjaviSe:hover {
+  transform: none; 
   text-shadow: 0 0 1px #4d4d4d;
 }
 
-  #kosarica{
-    width: 35px;
-    height: 35px;
-  }
+#kosarica{
+  width: 35px;
+  height: 35px;
+}
 
-  #drugiNav {
-    background-color: #fff;
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
-    outline: none;
-    
-  }
+#drugiNav {
+  background-color: #fff;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  outline: none;
+}
  
-  #drugiNavLista{
-    color: #323131d3;
-    font-family: Raleway;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: normal;
-    text-decoration: none;
-    outline: none;
-    padding-bottom: 10px;
-  }
-
+#drugiNavLista{
+  color: #323131d3;
+  font-family: Raleway;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  text-decoration: none;
+  outline: none;
+  padding-bottom: 10px;
+}
 
 .nav-item .nav-link:hover {
   transform: none; 
@@ -138,16 +134,24 @@
   }
  
   #unutarnji {
-      flex-direction: column;
-      align-items: flex-start;
-      padding-bottom: 0px;
-      margin-bottom: 0px;
+    display: grid !important;
+    grid-template-columns: auto auto;
+    grid-auto-rows: auto;
+    gap: 20px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+  }
+
+  #logo{
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
   }
 
   #searchdiv {
     margin-top: 10px;
     width: 100%;
     margin-bottom: 15px;
+    grid-column: 1 / 3;
   }
 
   #drugiNav{
@@ -156,13 +160,15 @@
   }
 
 
-#obruc{
+  #obruc{
     width: 100%;
-    justify-content: flex-start; 
+    justify-content: flex-end; 
     margin-left: 0; 
     padding-left: 0; 
     padding-bottom: 0px;
     margin-bottom: 0px;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
   }
 
   #MojRacun, #kosarica, #OdjaviSe{
@@ -178,9 +184,9 @@
 
   #searchdiv {
     width: 100%;
-    justify-content: flex-start;
+    justify-content: center;
     margin-left: 0;
-}
+  }
 
   #drugiNavLista {
       display: flex;
@@ -206,7 +212,4 @@
       text-align: left;
       font-weight: 300; 
   }
-
-
- 
 }
