--- a/IzvorniKod/mojKvart/frontend/src/styles/KorisnickiRacun.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/KorisnickiRacun.css
@@ -143,3 +143,17 @@
         margin-bottom: 15px;
     }
 }
+
+
+@media (max-width: 660px){
+    #YesNoButtons > button {
+        width: 40%;
+    }
+}
+
+
+@media (max-width: 500px){
+    #YesNoButtons > button {
+        width: 49%;
+    }
+}
