--- a/IzvorniKod/mojKvart/frontend/src/styles/MojiPodaci.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/MojiPodaci.css
@@ -65,10 +65,6 @@
     margin-bottom: 5px;
 }
 
-/* #moji-podaci-profile-form {
-    margin-top: 20px;
-} */
-
 #spremi-promjene-button, #zatvori-button {
     border-radius: 30px;
     background: rgba(196, 196, 196, 0.80);
@@ -85,7 +81,7 @@
     background: rgba(100, 100, 100, 0.8);
 }
 
-#zatvori-button:disabled {
+#spremi-promjene-button:disabled, #zatvori-button:disabled {
     background: rgba(230, 230, 230, 0.8);
     cursor: not-allowed;
     color: rgba(255, 255, 255, 0.7);
@@ -97,6 +93,43 @@
     justify-content: flex-end;
     align-items: flex-end;
 }
+
+.timestamp {
+    display: flex;
+    align-items: center;
+    margin-right: 15px;
+}
+
+.timestamp span {
+    margin-right: 8px;
+    font-weight: bold;
+    color: rgba(50, 49, 49, 0.70);
+    font-family: Raleway;
+    font-size: 16px;
+}
+
+.timestamp input {
+    border-radius: 30px;
+    border: 1px solid #ccc;
+    padding: 5px 10px;
+    background: rgba(40, 134, 33, 0.30);
+    font-size: 14px;
+    transition: background-color 0.3s ease;
+    flex-grow: 1;
+}
+
+.timestamp input:focus {
+    background: rgba(40, 134, 33, 0.10);
+    outline: none;
+    border-color: rgba(40, 134, 33, 0.6);
+}
+
+.moji-podaci-inputs {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
 
 @media (max-width: 768px) {
     .main-container {
