--- a/IzvorniKod/mojKvart/frontend/src/styles/PonudeiPromocije.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/PonudeiPromocije.css
@@ -3,6 +3,7 @@
   padding: 20px 0;
   display: flex;
   justify-content: start;
+  flex-direction: column;
 }
 
 .popust-popust-row {
@@ -12,6 +13,11 @@
   gap: 20px;
   align-items: flex-start; 
   justify-content: flex-start; 
+}
+.ponuda-popust-wrapper{
+  display: flex;
+  flex-direction: column;
+  width:100%
 }
 .banner {
   flex: 0 0 20%; 
@@ -35,6 +41,7 @@
   flex-direction: column;
   flex-wrap: wrap; 
   gap: 20px;
+  margin-bottom: 20px;
 }
 
 .my-popust-wrapper{
