Linkanje proizvoda i manje preinake

--- a/IzvorniKod/mojKvart/frontend/src/styles/Proizvod.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/Proizvod.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     font-size: 24px;
-    color: #f5a623; /* Zlata boja za popunjene zvjezdice */
+    color: #f5a623; 
   }
   
   .star.full {
@@ -18,17 +18,18 @@
   }
   
   .star.empty {
-    color: #e0e0e0; /* Siva boja za prazne zvjezdice */
+    color: #e0e0e0; 
   }
 
   #prozorOut{
-    margin: 20px;
+    margin: 30px;
+    
   }
 
   #slika{
     background-color: white;
     border-radius: 20px;
-    padding: 20px;
+    padding: 30px;
     display: flex;
     align-items: center; 
     justify-content: space-around ;
@@ -59,13 +60,14 @@
     display: flex;
     justify-content: space-between; 
     align-items: center; 
-    gap: 20px; 
+    gap: 40px; 
     color: #323131;
   }
   
   #cij {
     font-size: 24px;
     font-weight: bold;
+    margin-right: 20px;
   }
 
   #kats{
