--- a/IzvorniKod/mojKvart/frontend/src/styles/Proizvod.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/Proizvod.css
@@ -47,6 +47,10 @@
 
   #trg{
     font-size: 20px;
+    font-family: Raleway;
+    font-weight: bold;
+    color: #323131dc;
+    margin-bottom: 25px;
   }
 
 #un{
