--- a/IzvorniKod/mojKvart/frontend/src/styles/Proizvod.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/Proizvod.css
@@ -16,6 +16,25 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
+
+  .star-button {
+    background-color: white;
+    border: 1px solid gray;
+    color: black;
+    padding: 5px 10px;
+    font-size: 18px;
+    cursor: pointer;
+    margin: 0 5px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .star-button.selected {
+    background-color: gold;
+    color: white;
+    border-color: gold;
+    font-weight: bold;
+  }
   
   .star.empty {
     color: #e0e0e0; 
