--- a/IzvorniKod/mojKvart/frontend/src/styles/home.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/home.css
@@ -5,6 +5,13 @@ body {
   height: 100%;
 }
 
+#trgov{
+  font-size: 20px;
+    font-family: Raleway;
+    font-weight: bold;
+    color: #323131;
+}
+
 .price-alt {
   font-size: 18px;
   color: #2c8c2c;
