događaji dovršeni i kod kupca i trgovine

--- a/IzvorniKod/mojKvart/frontend/src/styles/ShopDogadaji.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/ShopDogadaji.css
@@ -178,6 +178,8 @@ body {
     background-color: rgba(62, 152, 30);
 }
 
+#confirmDogadaj { display: none;}
+
 #bottomPairDogadaj {
     display: flex;
     flex-direction: row;
