--- a/IzvorniKod/mojKvart/frontend/src/styles/ShopDogadaji.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/ShopDogadaji.css
@@ -69,6 +69,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 5px;
     background-color: #f8f8f8;
     padding: 20px;
     border-radius: 10px;
