--- a/IzvorniKod/mojKvart/frontend/src/styles/ShopPonudeiPromocije.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/ShopPonudeiPromocije.css
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 5px;
+    justify-content: space-around;
 }
 
 .bracketItem {
