dodana kosarica( treba dovrsit css), dovrseno davanje recenija u Moji racuni, samo prazan tab za moje ponude i promocije

--- a/IzvorniKod/mojKvart/frontend/src/styles/Kosarica.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/Kosarica.css
@@ -38,4 +38,12 @@
 .kosarica-odabir ul a:hover{
     color: rgba(50, 49, 49, 0.8);
 }
-
+#kosarica-proizvod{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center
+}
+#kosarica-proizvod p{
+    width: 20%;
+}
