--- a/IzvorniKod/mojKvart/frontend/src/styles/MojeRecenzije.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/MojeRecenzije.css
@@ -150,6 +150,9 @@ body {
 
 #recenzija-nema-odgovora{
   background-color: #ededed;
+  border-bottom-right-radius:30px ;
+  border-bottom-left-radius:30px ;
+
 
 }
 
