--- a/IzvorniKod/mojKvart/frontend/src/styles/MojiRacuni.css
+++ b/IzvorniKod/mojKvart/frontend/src/styles/MojiRacuni.css
@@ -103,6 +103,53 @@ body {
     padding-top: 10px;
 }
 
+.ostavljanje-recenzije-container{
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    padding: 10px;
+    background-color:rgb(69, 160, 73,0.5) ;
+    border-radius: 30px;
+}
+.ostavljanje-recenzije-container p{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 10px;
+    font-size: 24px;
+}
+
+
+
+.ispisRacuna form  {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+}
+.ostavljanje-recenzije-container form div {
+    display: flex;
+    flex-direction: row;
+}
+.ostavljanje-recenzije-container label {
+    color:  rgb(0, 0, 0,0.6);
+    width: 20%;
+}
+form-buttons  {
+    padding-left: 30px;
+}
+#tekstrecenzija-mojiracuni{
+    min-width: 50%;
+}
+.ostavljanje-recenzije-container input {
+    background-color:  rgb(0, 0, 0,0.1);
+    width: 20%;
+    border-radius: 30px;
+    border-style: none;
+    padding: 3px;
+}
+
 
 /*respozivnost*/
 
